newest commit two

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Libertarians</title>
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" href="/Libertarian logo.jpg" type="image/png">
+        <link rel="icon" href="/Libertarian logo.jpg">
         <style>
             body{
                 overflow-x: hidden;
