--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Libertarians</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="/Libertarian logo.jpg">
+        <link rel="icon" href="Libertarian logo.jpg">
         <style>
             body{
                 overflow-x: hidden;
@@ -25,7 +25,7 @@
             </div>
     
             <div class="border border-warning border-3 col-lg-3 col-md-6 col-sm-12 align-content-center mb-5 mt-4">
-                <img class="p-3" src="/Libertarian bird.jpg" alt="" width="90%">
+                <img class="p-3" src="Libertarian bird.jpg" alt="" width="90%">
             </div>
         </section>
     
